--- a/src/languages/zh_CN.json
+++ b/src/languages/zh_CN.json
@@ -98,17 +98,17 @@
       "Rus": "罗斯",
       "HolyRomanEmpire": "神罗",
       "Chinese": "中国",
-      "English": "英国",
+      "English": "英格兰",
       "DelhiSultanate": "德里",
       "Mongols": "蒙古",
-      "AbbasidDynasty": "阿拔斯",
-      "French": "法国",
-      "Ottomans": "奥斯曼土耳其",
+      "AbbasidDynasty": "黑衣大食",
+      "French": "法兰西",
+      "Ottomans": "奥斯曼",
       "Malians": "马里",
       "Byzantines": "拜占庭",
-      "Japanese": "日语",
-      "Ayyubids": "苏丹的军队",
-      "ZhuXiLegacy": "翡翠帝国",
+      "Japanese": "日本",
+      "Ayyubids": "阿尤布",
+      "ZhuXiLegacy": "朱子遗训",
       "JeanneDArc": "圣女贞德",
       "OrderOfTheDragon": "龙之骑士团"
     }
